@@ -94,7 +94,7 @@ public class HardcoreRecipeBuilder implements RecipeBuilder {
 	 * Adds a new entry to the patterns for this recipe.
 	 */
 	public HardcoreRecipeBuilder pattern(String pattern) {
-		if (!this.rows.isEmpty() && pattern.length() != this.rows.get(0).length()) {
+		if (!this.rows.isEmpty() && pattern.length() != this.rows.getFirst().length()) {
 			throw new IllegalArgumentException("Pattern must be the same width on every line!");
 		} else {
 			this.rows.add(pattern);
